--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
     "@types/aos": "^3.0.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
@@ -22,6 +24,8 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "18.2.0",
+    "react-loading": "^2.0.3",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
     "typescript": "5.0.2"
   },
