product-list view

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ NEXT_PUBLIC_BACKEND_HOST=http://localhost:8080/
 NEXT_PUBLIC_USER_TOKEN=
 #ALEXSLOAN@GMAIL.COM
 #password
+#"https://origamiportal.s3.us-east-2.amazonaws.com/public/uploads/sofa-set.jpg"
+# "password": "12345",
+# "email": "ruthani@gmail.com",
