--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.28.0",
     "@types/aos": "^3.0.4",
     "@types/node": "18.15.11",
@@ -25,7 +26,9 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
     "swiper": "^9.2.0",
     "typescript": "5.0.2"
   },
